--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rules": {}
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@devexpress/dx-react-core": "^2.7.4",
     "@devexpress/dx-react-scheduler": "^2.7.4",
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.4",
